Specify npm dependencies versions instead of using "latest"

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -20,34 +20,34 @@
     "test:e2e": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose --config jest-e2e.config.js"
   },
   "dependencies": {
-    "react-scripts": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "lodash-es": "latest",
+    "@babel/polyfill": "^7.4.0",
+    "bootstrap": "^4.3.1",
+    "lodash-es": "^4.17.11",
+    "raf": "^3.4.1",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-form-with-constraints": "^0.12.0",
     "react-form-with-constraints-bootstrap4": "^0.12.0",
     "react-form-with-constraints-tools": "^0.12.0",
-    "bootstrap": "latest",
-    "@babel/polyfill": "latest",
-    "raf": "latest"
+    "react-scripts": "^2.1.8"
   },
   "devDependencies": {
-    "jest": "latest",
-    "puppeteer": "latest",
-    "jest-puppeteer": "latest",
-    "http-server": "latest",
-    "@babel/core": "latest",
-    "@babel/plugin-proposal-class-properties": "latest",
-    "@babel/preset-env": "latest",
-    "@babel/preset-react": "latest",
-    "node-sass": "latest",
-    "style-loader": "latest",
-    "css-loader": "latest",
-    "sass-loader": "latest",
-    "webpack-cli": "latest",
-    "webpack": "latest",
-    "babel-loader": "latest",
-    "file-loader": "latest",
-    "source-map-loader": "latest"
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "http-server": "^0.11.1",
+    "jest": "^24.5.0",
+    "jest-puppeteer": "^4.1.0",
+    "node-sass": "^4.11.0",
+    "puppeteer": "^1.13.0",
+    "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
