--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -19,33 +19,33 @@
     "test:e2e": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose --config jest-e2e.config.js"
   },
   "dependencies": {
-    "react-scripts": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-form-with-constraints": "^0.12.0",
-    "react-form-with-constraints-tools": "^0.12.0"
+    "react-form-with-constraints-tools": "^0.12.0",
+    "react-scripts": "^2.1.8"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "jest": "latest",
-    "@types/jest": "latest",
-    "ts-jest": "latest",
-    "puppeteer": "latest",
-    "@types/puppeteer": "latest",
-    "jest-puppeteer": "latest",
-    "@types/jest-environment-puppeteer": "latest",
-    "@types/expect-puppeteer": "latest",
-    "http-server": "latest",
-    "ts-node": "latest",
-    "@types/node": "latest",
-    "webpack-cli": "latest",
-    "webpack": "latest",
-    "@types/webpack": "latest",
-    "ts-loader": "latest",
-    "file-loader": "latest",
-    "source-map-loader": "latest",
-    "circular-dependency-plugin": "latest"
+    "@types/expect-puppeteer": "^3.3.1",
+    "@types/jest": "^24.0.11",
+    "@types/jest-environment-puppeteer": "^4.0.0",
+    "@types/node": "^11.11.8",
+    "@types/puppeteer": "^1.12.3",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/webpack": "^4.4.26",
+    "circular-dependency-plugin": "^5.0.2",
+    "file-loader": "^3.0.1",
+    "http-server": "^0.11.1",
+    "jest": "^24.5.0",
+    "jest-puppeteer": "^4.1.0",
+    "puppeteer": "^1.13.0",
+    "source-map-loader": "^0.2.4",
+    "ts-jest": "^24.0.0",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
