--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -25,24 +25,24 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^31.0.2",
+    "expo": "^32.0.6",
+    "lodash": "^4.17.11",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "lodash": "latest",
     "react-form-with-constraints": "../../packages/react-form-with-constraints",
-    "react-form-with-constraints-native": "../../packages/react-form-with-constraints-native"
+    "react-form-with-constraints-native": "../../packages/react-form-with-constraints-native",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@babel/preset-typescript": "latest",
-    "babel-preset-expo": "^5.0.0",
-    "expo-cli": "^2.6.13",
-    "@types/react": "latest",
-    "@types/react-native": "latest",
-    "@types/lodash": "latest",
-    "@types/jest": "latest",
-    "jest-expo": "^31.0.0",
-    "react-test-renderer": "16.5.0",
-    "@types/react-test-renderer": "latest"
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.123",
+    "@types/react": "^16.8.8",
+    "@types/react-native": "^0.57.41",
+    "@types/react-test-renderer": "^16.8.1",
+    "babel-preset-expo": "^5.1.1",
+    "expo-cli": "^2.13.0",
+    "jest-expo": "^32.0.0",
+    "react-test-renderer": "16.8.5",
+    "typescript": "^3.3.4000"
   }
 }
