--- a/examples/ServerSideRendering/package.json
+++ b/examples/ServerSideRendering/package.json
@@ -18,26 +18,26 @@
     "start": "yarn clean && yarn build && cd build && node server"
   },
   "dependencies": {
-    "react": "latest",
-    "react-dom": "latest",
+    "express": "^4.16.4",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
     "react-form-with-constraints": "^0.12.0",
-    "react-form-with-constraints-tools": "^0.12.0",
-    "express": "latest"
+    "react-form-with-constraints-tools": "^0.12.0"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/express": "latest",
-    "ts-node": "latest",
-    "@types/node": "latest",
-    "webpack-cli": "latest",
-    "webpack": "latest",
-    "@types/webpack": "latest",
-    "webpack-node-externals": "latest",
-    "@types/webpack-node-externals": "latest",
-    "ts-loader": "latest",
-    "file-loader": "latest",
-    "source-map-loader": "latest"
+    "@types/express": "^4.16.1",
+    "@types/node": "^11.11.8",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/webpack": "^4.4.26",
+    "@types/webpack-node-externals": "^1.6.3",
+    "file-loader": "^3.0.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
