--- a/examples/WizardForm/package.json
+++ b/examples/WizardForm/package.json
@@ -17,22 +17,22 @@
     "build:watch": "webpack -d --watch"
   },
   "dependencies": {
-    "react-scripts": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-form-with-constraints": "^0.12.0"
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-form-with-constraints": "^0.12.0",
+    "react-scripts": "^2.1.8"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "ts-node": "latest",
-    "@types/node": "latest",
-    "webpack-cli": "latest",
-    "webpack": "latest",
-    "@types/webpack": "latest",
-    "ts-loader": "latest",
-    "file-loader": "latest",
-    "source-map-loader": "latest"
+    "@types/node": "^11.11.8",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/webpack": "^4.4.26",
+    "file-loader": "^3.0.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.3.4000",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
