--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -44,24 +44,24 @@
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "react": "latest",
-    "@types/react": "latest",
-    "@types/prop-types": "latest",
-    "jest": "latest",
-    "@types/jest": "latest",
-    "ts-jest": "latest",
-    "enzyme": "latest",
-    "@types/enzyme": "latest",
-    "enzyme-adapter-react-16": "latest",
-    "@types/enzyme-adapter-react-16": "latest",
-    "react-dom": "latest",
-    "js-beautify": "latest",
-    "@types/js-beautify": "latest",
-    "rollup": "latest",
-    "rollup-plugin-typescript2": "latest",
-    "rollup-plugin-uglify": "latest",
-    "rollup-plugin-filesize": "latest",
-    "rollup-plugin-strip": "latest"
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.11",
+    "@types/js-beautify": "^1.8.0",
+    "@types/prop-types": "^15.7.0",
+    "@types/react": "^16.8.8",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest": "^24.5.0",
+    "js-beautify": "^1.9.1",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "rollup": "^1.7.3",
+    "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-strip": "^1.2.1",
+    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-uglify": "^6.0.2",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.4000"
   }
 }
