--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "removeComments": true,
 
     // FIXME
-    // See error TS2300: Duplicate identifier 'require' https://github.com/tkrotoff/react-form-with-constraints/issues/12
-    // See @types/react-native definitions for `global` and `require` conflict with @types/node https://github.com/DefinitelyTyped/DefinitelyTyped/issues/16825
+    // See [error TS2300: Duplicate identifier 'require'](https://github.com/tkrotoff/react-form-with-constraints/issues/12)
+    // See [@types/react-native definitions for `global` and `require` conflict with @types/node](https://github.com/DefinitelyTyped/DefinitelyTyped/issues/16825)
     "skipLibCheck": true
   }
 }
