--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tslint": "yarn tslint:js && yarn tslint:tsconfig",
     "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json '{}' \\;",
     "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json --project '{}' \\;",
-    "publish:lerna": "yarn lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1"
+    "publish:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
+    "upgrade:all": "yarn upgrade-interactive --latest"
   },
   "workspaces": [
     "packages/*",
@@ -33,17 +34,17 @@
     "examples/WizardForm"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint": "^5.15.3",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "lerna": "^3.13.1",
-    "prettier": "^1.16.4",
-    "tslint": "^5.14.0",
+    "lerna": "^3.15.0",
+    "prettier": "^1.18.2",
+    "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.5.2"
   }
 }
