--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -37,24 +37,24 @@
     "react-native": ">=0.57.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@types/enzyme": "^3.9.1",
+    "@babel/core": "^7.4.5",
+    "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.8",
-    "@types/react-native": "^0.57.41",
-    "@types/react-test-renderer": "^16.8.1",
+    "@types/jest": "^24.0.14",
+    "@types/react": "^16.8.20",
+    "@types/react-native": "^0.57.63",
+    "@types/react-test-renderer": "^16.8.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.5.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "jest": "^24.5.0",
-    "metro-react-native-babel-preset": "^0.53.1",
-    "react": "16.5.0",
+    "babel-jest": "^24.8.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
-    "react-native": "^0.59.2",
-    "react-test-renderer": "16.8.5",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.4000"
+    "react-native": "^0.59.9",
+    "react-test-renderer": "^16.8.6",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.2"
   }
 }
