Dependency react-scripts is not needed anymore by CodeSandbox

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -28,8 +28,7 @@
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
     "react-form-with-constraints-bootstrap4": "^0.13.0",
-    "react-form-with-constraints-tools": "^0.13.0",
-    "react-scripts": "^3.0.1"
+    "react-form-with-constraints-tools": "^0.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
