--- a/examples/ClubMembers/package.json
+++ b/examples/ClubMembers/package.json
@@ -23,8 +23,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
-    "react-form-with-constraints-tools": "^0.13.0",
-    "react-scripts": "^3.0.1"
+    "react-form-with-constraints-tools": "^0.13.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.8",
