--- a/examples/Password/package.json
+++ b/examples/Password/package.json
@@ -22,8 +22,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
-    "react-form-with-constraints-tools": "^0.13.0",
-    "react-scripts": "^3.0.1"
+    "react-form-with-constraints-tools": "^0.13.0"
   },
   "devDependencies": {
     "@types/expect-puppeteer": "^3.3.1",
