--- a/examples/PasswordWithoutState/package.json
+++ b/examples/PasswordWithoutState/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-form-with-constraints": "^0.13.0",
-    "react-scripts": "^3.0.1"
+    "react-form-with-constraints": "^0.13.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.8",
