--- a/examples/PlainOldReact/package.json
+++ b/examples/PlainOldReact/package.json
@@ -17,8 +17,7 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@types/node": "^12.0.8",
