--- a/examples/SignUp/package.json
+++ b/examples/SignUp/package.json
@@ -25,8 +25,7 @@
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
     "react-form-with-constraints-tools": "^0.13.0",
-    "react-i18next": "^10.6.0",
-    "react-scripts": "^3.0.1"
+    "react-i18next": "^10.6.0"
   },
   "devDependencies": {
     "@types/i18next": "^12.1.0",
