--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -30,7 +30,7 @@
     "react": "^16.8.6",
     "react-form-with-constraints": "../../packages/react-form-with-constraints",
     "react-form-with-constraints-native": "../../packages/react-form-with-constraints-native",
-    "react-native": "^0.59.9"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.3.3",
