--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -45,6 +45,8 @@
     "jest": "^24.8.0",
     "jest-puppeteer": "^4.2.0",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
     "puppeteer": "^1.17.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
