Remove console.* from packages before publishing

--- a/packages/react-form-with-constraints-tools/package.json
+++ b/packages/react-form-with-constraints-tools/package.json
@@ -23,13 +23,15 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache",
+    "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
     "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
     "dist": "NODE_ENV=development rollup --config && NODE_ENV=production rollup --config",
     "prepublishOnly": "yarn clean && yarn tsc && yarn build && yarn dist",
+    "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
+    "postpack": "rm LICENSE",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
     "test:coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
   },
@@ -41,11 +43,13 @@
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.14",
+    "@types/jscodeshift": "^0.6.1",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
+    "jscodeshift": "^0.6.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
