--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -32,8 +32,9 @@
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
     "dist": "NODE_ENV=development rollup --config && NODE_ENV=production rollup --config",
-    "prepack": "cp ../../README.md ../../LICENSE ../../CHANGELOG.md .",
     "prepublishOnly": "yarn clean && yarn tsc && yarn build && yarn dist",
+    "prepack": "cp ../../README.md ../../LICENSE ../../CHANGELOG.md . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
+    "postpack": "rm README.md LICENSE CHANGELOG.md",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
     "test:coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
   },
@@ -48,12 +49,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.14",
     "@types/js-beautify": "^1.8.1",
+    "@types/jscodeshift": "^0.6.1",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.20",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
     "js-beautify": "^1.10.0",
+    "jscodeshift": "^0.6.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rollup": "^1.15.3",
