--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -23,12 +23,14 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "clean": "rm -rf lib lib-es5 coverage .rpt2_cache",
+    "clean": "rm -rf lib lib-es5 coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
     "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
     "prepublishOnly": "yarn clean && yarn tsc && yarn build",
+    "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
+    "postpack": "rm LICENSE",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
     "test:coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
   },
@@ -41,6 +43,7 @@
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.14",
+    "@types/jscodeshift": "^0.6.1",
     "@types/react": "^16.8.20",
     "@types/react-native": "^0.57.63",
     "@types/react-test-renderer": "^16.8.2",
@@ -48,6 +51,7 @@
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
+    "jscodeshift": "^0.6.4",
     "metro-react-native-babel-preset": "^0.54.1",
     "react": "16.8.3",
     "react-form-with-constraints": "^0.13.0",
