--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "test": "lerna run test --stream",
     "test:e2e": "lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
-    "prettier": "prettier --write \"**/*\"",
-    "eslint": "eslint . '**/*.{js,jsx,ts,tsx}'",
-    "tslint": "yarn tslint:js && yarn tslint:tsconfig",
+    "format": "prettier --write \"**/*\"",
+    "lint": "eslint . '**/*.{js,jsx,ts,tsx}' && yarn tslint:js && yarn tslint:tsconfig && stylelint '**/*.scss'",
     "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json '{}' \\;",
     "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json --project '{}' \\;",
+    "precommit": "yarn format && yarn build && yarn tsc && yarn lint",
+    "prepush": "yarn precommit && yarn test && yarn test:e2e",
     "publish:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
     "upgrade:all": "yarn upgrade-interactive --latest"
   },
@@ -37,12 +38,18 @@
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "husky": "^2.5.0",
     "lerna": "^3.15.0",
     "prettier": "^1.18.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-airbnb": "^0.0.0",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-order": "^3.0.0",
+    "stylelint-scss": "^3.8.0",
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.2"
