--- a/packages/react-form-with-constraints-bootstrap4/package.json
+++ b/packages/react-form-with-constraints-bootstrap4/package.json
@@ -28,11 +28,13 @@
   "scripts": {
     "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
-    "build": "yarn build:esnext && yarn build:es5",
+    "build": "run-p build:*",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "dist": "NODE_ENV=development rollup --config && NODE_ENV=production rollup --config",
-    "prepublishOnly": "yarn clean && yarn tsc && yarn build && yarn dist",
+    "dist": "run-p dist:*",
+    "dist:dev": "NODE_ENV=development rollup --config",
+    "dist:prod": "NODE_ENV=production rollup --config",
+    "prepublishOnly": "yarn clean && run-p tsc build dist",
     "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm LICENSE",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
@@ -51,6 +53,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
     "jscodeshift": "^0.6.4",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
