--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "test:e2e": "lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
     "format": "prettier --write \"**/*\"",
-    "lint": "eslint . '**/*.{js,jsx,ts,tsx}' && yarn tslint:js && yarn tslint:tsconfig && stylelint '**/*.scss'",
+    "eslint": "eslint . '**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint '**/*.scss'",
+    "lint": "run-p eslint tslint:* stylelint",
     "tslint:js": "find . -type f \\( -name '*.js' -or -name '*.jsx' \\) -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json '{}' \\;",
     "tslint:tsconfig": "find . -type f -name 'tsconfig.json' -not -path '*/node_modules/*' -not -path '*/build/*' -not -path '*/dist/*' -not -path '*/lib/*' -not -path '*/lib-es5/*' -not -path '*/coverage/*' -print -exec tslint --config tslint.json --project '{}' \\;",
-    "precommit": "yarn format && yarn build && yarn tsc && yarn lint",
-    "prepush": "yarn precommit && yarn test && yarn test:e2e",
+    "precommit": "yarn build && run-p tsc lint format",
+    "prepush": "yarn precommit && run-p test test:e2e",
     "publish:lerna": "lerna publish --dist-tag next --no-git-tag-version --no-push --registry=https://registry.npmjs.org # Custom example: 0.8.0-beta.1",
     "upgrade:all": "yarn upgrade-interactive --latest"
   },
@@ -44,6 +46,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "husky": "^2.5.0",
     "lerna": "^3.15.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "stylelint": "^10.1.0",
     "stylelint-config-airbnb": "^0.0.0",
