--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -25,10 +25,10 @@
   "scripts": {
     "clean": "rm -rf lib lib-es5 coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
-    "build": "yarn build:esnext && yarn build:es5",
+    "build": "run-p build:*",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "prepublishOnly": "yarn clean && yarn tsc && yarn build",
+    "prepublishOnly": "yarn clean && run-p tsc build",
     "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm LICENSE",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
@@ -53,6 +53,7 @@
     "jest": "^24.8.0",
     "jscodeshift": "^0.6.4",
     "metro-react-native-babel-preset": "^0.54.1",
+    "npm-run-all": "^4.1.5",
     "react": "16.8.3",
     "react-form-with-constraints": "^0.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
