--- a/examples/ClubMembers/package.json
+++ b/examples/ClubMembers/package.json
@@ -19,20 +19,23 @@
   "dependencies": {
     "mobx": "^5.10.1",
     "mobx-react": "^6.0.3",
-    "mobx-react-devtools": "^6.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-form-with-constraints": "^0.13.0",
     "react-form-with-constraints-tools": "^0.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/webpack": "^4.4.32",
     "file-loader": "^4.0.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
