--- a/examples/ClubMembers/tsconfig.json
+++ b/examples/ClubMembers/tsconfig.json
@@ -3,7 +3,6 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "files": ["App.tsx"]
+    "experimentalDecorators": true
+  }
 }
