--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -19,7 +19,7 @@
     "build:watch": "webpack -d --watch"
   },
   "dependencies": {
-    "@material-ui/core": "^4.1.1",
+    "@material-ui/core": "^4.1.3",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -28,6 +28,9 @@
     "react-form-with-constraints-tools": "^0.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/lodash": "^4.14.123",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.20",
@@ -35,8 +38,7 @@
     "@types/webpack": "^4.4.32",
     "file-loader": "^4.0.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.2",
-    "ts-node": "^8.2.0",
+    "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
