--- a/examples/Password/tsconfig.json
+++ b/examples/Password/tsconfig.json
@@ -2,9 +2,6 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "module": "commonjs",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "files": ["App.tsx"],
-  "include": ["**/*"]
+    "esModuleInterop": true
+  }
 }
