--- a/examples/PlainOldReact/tsconfig.json
+++ b/examples/PlainOldReact/tsconfig.json
@@ -2,8 +2,6 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "module": "commonjs",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "files": ["App.tsx"]
+    "esModuleInterop": true
+  }
 }
