--- a/examples/ReactNative/tsconfig.json
+++ b/examples/ReactNative/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "target": "es2015",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "esModuleInterop": true
   }
 }
