--- a/examples/SignUp/package.json
+++ b/examples/SignUp/package.json
@@ -28,6 +28,10 @@
     "react-i18next": "^10.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/i18next": "^12.1.0",
     "@types/lodash": "^4.14.123",
     "@types/node": "^12.0.8",
@@ -37,7 +41,6 @@
     "file-loader": "^4.0.0",
     "i18next-parser": "^0.13.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
