--- a/examples/WizardForm/package.json
+++ b/examples/WizardForm/package.json
@@ -22,13 +22,16 @@
     "react-form-with-constraints": "^0.13.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/node": "^12.0.8",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/webpack": "^4.4.32",
     "file-loader": "^4.0.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.2",
     "webpack": "^4.34.0",
