Call Jest directly without using node command line

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -19,7 +19,7 @@
     "build": "webpack -d",
     "build:watch": "webpack -d --watch",
     "build:prod": "webpack -p",
-    "test:e2e": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose --config jest-e2e.config.js"
+    "test:e2e": "jest --config jest-e2e.config.js --verbose"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
