--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -37,8 +37,8 @@
     "prepublishOnly": "yarn clean && run-p tsc build dist",
     "prepack": "cp ../../README.md ../../LICENSE ../../CHANGELOG.md . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm README.md LICENSE CHANGELOG.md",
-    "test": "node --trace-warnings node_modules/.bin/jest --no-cache --verbose",
-    "test:coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
+    "test": "jest --verbose",
+    "test:coverage": "jest --coverage"
   },
   "peerDependencies": {
     "react": ">=16"
