--- a/packages/react-form-with-constraints-tools/package.json
+++ b/packages/react-form-with-constraints-tools/package.json
@@ -14,6 +14,7 @@
     "react-form-with-constraints",
     "tools"
   ],
+  "main": "lib-es5/index.js",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
