--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,23 +5,21 @@
       "name": "Jest react-form-with-constraints",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/packages/react-form-with-constraints/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/packages/react-form-with-constraints/node_modules/.bin/jest",
       "args": ["--runInBand", "--no-cache"],
-      "cwd": "${workspaceRoot}/packages/react-form-with-constraints",
+      "cwd": "${workspaceFolder}/packages/react-form-with-constraints",
       "runtimeArgs": [
         "--nolazy" // See [What does the Node.js `--nolazy` flag mean?](https://stackoverflow.com/q/21534565/990356)
       ],
-      "env": {
-        "NODE_ENV": "development"
-      }
+      "env": { "NODE_ENV": "development" }
     },
     {
       "name": "Jest react-form-with-constraints-bootstrap4",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/packages/react-form-with-constraints-bootstrap4/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/packages/react-form-with-constraints-bootstrap4/node_modules/.bin/jest",
       "args": ["--runInBand", "--no-cache"],
-      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-bootstrap4",
+      "cwd": "${workspaceFolder}/packages/react-form-with-constraints-bootstrap4",
       "runtimeArgs": ["--nolazy"],
       "env": { "NODE_ENV": "development" }
     },
@@ -29,9 +27,9 @@
       "name": "Jest react-form-with-constraints-native",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/packages/react-form-with-constraints-native/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/packages/react-form-with-constraints-native/node_modules/.bin/jest",
       "args": ["--runInBand", "--no-cache"],
-      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-native",
+      "cwd": "${workspaceFolder}/packages/react-form-with-constraints-native",
       "runtimeArgs": ["--nolazy"],
       "env": { "NODE_ENV": "development" }
     },
@@ -39,9 +37,9 @@
       "name": "Jest react-form-with-constraints-tools",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/packages/react-form-with-constraints-tools/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/packages/react-form-with-constraints-tools/node_modules/.bin/jest",
       "args": ["--runInBand", "--no-cache"],
-      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-tools",
+      "cwd": "${workspaceFolder}/packages/react-form-with-constraints-tools",
       "runtimeArgs": ["--nolazy"],
       "env": { "NODE_ENV": "development" }
     },
@@ -49,9 +47,9 @@
       "name": "Jest react-form-with-constraints-material-ui",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/packages/react-form-with-constraints-material-ui/node_modules/.bin/jest",
+      "program": "${workspaceFolder}/packages/react-form-with-constraints-material-ui/node_modules/.bin/jest",
       "args": ["--runInBand", "--no-cache"],
-      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-material-ui",
+      "cwd": "${workspaceFolder}/packages/react-form-with-constraints-material-ui",
       "runtimeArgs": ["--nolazy"],
       "env": { "NODE_ENV": "development" }
     }
