Revert "No need for package.json main": needed by codesandbox.io
This reverts commit ab0b86feed6ae476db01766588a93cd96bdca47e.

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -11,6 +11,7 @@
     "bootstrap",
     "bootstrap4"
   ],
+  "main": "App.jsx",
   "scripts": {
     "clean": "rm -rf build",
     "start": "webpack-dev-server -d --host 0.0.0.0",
