--- a/examples/ServerSideRendering/package.json
+++ b/examples/ServerSideRendering/package.json
@@ -10,6 +10,7 @@
     "react-form-with-constraints",
     "server-side"
   ],
+  "main": "App.tsx",
   "scripts": {
     "clean": "rm -rf build",
     "tsc": "tsc",
