--- a/examples/MaterialUI/package.json
+++ b/examples/MaterialUI/package.json
@@ -11,6 +11,7 @@
     "material design",
     "material-ui"
   ],
+  "main": "App.tsx",
   "scripts": {
     "clean": "rm -rf build",
     "tsc": "tsc",
