--- a/examples/WizardForm/package.json
+++ b/examples/WizardForm/package.json
@@ -9,6 +9,7 @@
     "validation",
     "react-form-with-constraints"
   ],
+  "main": "App.tsx",
   "scripts": {
     "clean": "rm -rf build",
     "tsc": "tsc",
