--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -36,29 +36,29 @@
   },
   "peerDependencies": {
     "react-form-with-constraints": "^0.14.0",
-    "react-native": ">=0.57.8"
+    "react-native": ">=0.59.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.2",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.16",
-    "@types/jscodeshift": "^0.6.2",
-    "@types/react": "^16.8.24",
-    "@types/react-native": "^0.57.63",
-    "@types/react-test-renderer": "^16.8.3",
-    "babel-jest": "^24.8.0",
-    "enzyme": "3.9.0",
+    "@types/jest": "^24.0.18",
+    "@types/jscodeshift": "^0.6.3",
+    "@types/react": "^16.9.2",
+    "@types/react-native": "^0.60.15",
+    "@types/react-test-renderer": "^16.9.0",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jscodeshift": "^0.6.4",
-    "metro-react-native-babel-preset": "^0.55.0",
+    "metro-react-native-babel-preset": "^0.56.0",
     "npm-run-all": "^4.1.5",
     "react": "16.8.6",
     "react-form-with-constraints": "^0.14.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-test-renderer": "^16.8.6",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "react-native": "^0.60.6",
+    "react-test-renderer": "16.8.6",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.3"
   }
 }
