--- a/packages/react-form-with-constraints-tools/package.json
+++ b/packages/react-form-with-constraints-tools/package.json
@@ -44,22 +44,22 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.16",
-    "@types/jscodeshift": "^0.6.2",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
-    "enzyme": "3.9.0",
+    "@types/jest": "^24.0.18",
+    "@types/jscodeshift": "^0.6.3",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jscodeshift": "^0.6.4",
     "npm-run-all": "^4.1.5",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-form-with-constraints": "^0.14.0",
-    "rollup": "^1.18.0",
-    "rollup-plugin-filesize": "^6.1.1",
-    "rollup-plugin-typescript2": "^0.22.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "rollup": "^1.21.4",
+    "rollup-plugin-filesize": "^6.2.0",
+    "rollup-plugin-typescript2": "^0.24.2",
+    "rollup-plugin-uglify": "^6.0.3",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.3"
   }
 }
