lerna publish goes into infinite loop with run-p

--- a/packages/react-form-with-constraints-bootstrap4/package.json
+++ b/packages/react-form-with-constraints-bootstrap4/package.json
@@ -28,13 +28,13 @@
   "scripts": {
     "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
-    "build": "run-p build:*",
+    "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "dist": "run-p dist:*",
+    "dist": "yarn dist:dev && yarn dist:prod",
     "dist:dev": "NODE_ENV=development rollup --config",
     "dist:prod": "NODE_ENV=production rollup --config",
-    "prepublishOnly": "yarn clean && run-p build dist",
+    "prepublishOnly": "yarn clean && yarn build && yarn dist",
     "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm LICENSE",
     "test": "jest --verbose",
@@ -53,7 +53,6 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
     "jscodeshift": "^0.6.4",
-    "npm-run-all": "^4.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-form-with-constraints": "^0.14.0",
