--- a/packages/react-form-with-constraints-native/package.json
+++ b/packages/react-form-with-constraints-native/package.json
@@ -25,10 +25,10 @@
   "scripts": {
     "clean": "rm -rf lib lib-es5 coverage .rpt2_cache LICENSE",
     "tsc": "tsc",
-    "build": "run-p build:*",
+    "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "prepublishOnly": "yarn clean && run-p build",
+    "prepublishOnly": "yarn clean && yarn build",
     "prepack": "cp ../../LICENSE . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm LICENSE",
     "test": "jest --verbose",
@@ -53,7 +53,6 @@
     "jest": "^24.9.0",
     "jscodeshift": "^0.6.4",
     "metro-react-native-babel-preset": "^0.56.0",
-    "npm-run-all": "^4.1.5",
     "react": "16.8.6",
     "react-form-with-constraints": "^0.14.0",
     "react-native": "^0.60.6",
