--- a/packages/react-form-with-constraints/package.json
+++ b/packages/react-form-with-constraints/package.json
@@ -28,13 +28,13 @@
   "scripts": {
     "clean": "rm -rf lib lib-es5 dist coverage .rpt2_cache README.md LICENSE CHANGELOG.md",
     "tsc": "tsc",
-    "build": "run-p build:*",
+    "build": "yarn build:esnext && yarn build:es5",
     "build:esnext": "tsc --project tsconfig.lib.json",
     "build:es5": "tsc --project tsconfig.lib-es5.json",
-    "dist": "run-p dist:*",
+    "dist": "yarn dist:dev && yarn dist:prod",
     "dist:dev": "NODE_ENV=development rollup --config",
     "dist:prod": "NODE_ENV=production rollup --config",
-    "prepublishOnly": "yarn clean && run-p build dist",
+    "prepublishOnly": "yarn clean && yarn build && yarn dist",
     "prepack": "cp ../../README.md ../../LICENSE ../../CHANGELOG.md . && jscodeshift --transform=../../removeConsoleTransform.ts lib lib-es5",
     "postpack": "rm README.md LICENSE CHANGELOG.md",
     "test": "jest --verbose",
@@ -59,7 +59,6 @@
     "jest": "^24.9.0",
     "js-beautify": "^1.10.2",
     "jscodeshift": "^0.6.4",
-    "npm-run-all": "^4.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "rollup": "^1.21.4",
