--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "lerna run build",
     "dist": "lerna run dist",
     "prepublishOnly": "lerna run prepublishOnly",
-    "test": "lerna run test --stream",
-    "test:e2e": "lerna run test:e2e --stream --concurrency 1",
+    "test": "NODE_ENV=test lerna run test --stream",
+    "test:e2e": "NODE_ENV=test lerna run test:e2e --stream --concurrency 1",
     "test:coverage": "lerna run test:coverage --stream",
     "format": "prettier --write \"**/*\"",
     "lint": "run-p tsc eslint stylelint",
