--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "jsx": "react",
     "esModuleInterop": false,
+    "resolveJsonModule": true,
     "noLib": false,
     "lib": ["dom", "dom.iterable", "esnext"],
 
