Use Array.flat(Infinity)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "target": "es2018",
+    "target": "es2019",
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
     "esModuleInterop": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
+
+    // Needed by Array.flat() in ES5 mode
+    "lib": ["dom", "es2019"],
 
     "strict": true,
     "noUnusedLocals": true,
