--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     "removeComments": true,
 
     // FIXME
-    // See [error TS2300: Duplicate identifier 'require'](https://github.com/tkrotoff/react-form-with-constraints/issues/12)
-    // See [@types/react-native definitions for `global` and `require` conflict with @types/node](https://github.com/DefinitelyTyped/DefinitelyTyped/issues/16825)
+    // [error TS2300: Duplicate identifier 'require'](https://github.com/tkrotoff/react-form-with-constraints/issues/12)
+    // [@types/react-native definitions for `global` and `require` conflict with @types/node](https://github.com/DefinitelyTyped/DefinitelyTyped/issues/16825)
     "skipLibCheck": true
   }
 }
